--- a/dom-operation/index.html
+++ b/dom-operation/index.html
@@ -60,10 +60,56 @@
     </div>
     <div>
         #11<br>
-        <input type="text" value="!" id="test">
-        <input type="submit" onclick="func()">
+        <input type="submit" onclick="func(this)" value="Нажми на меня!">
 
     </div>
+    <div>
+        #12<br>
+        <input type="submit" onclick="onClickDisable(this)" value="Нажми на меня!">
+
+    </div>
+    <div>
+        #13<br>
+        <img src="1.jpg" onmouseover="onMouseOverChangeImage(this)" onmouseout="onMouseOutChangeImage(this)">
+
+    </div>
+    <div>
+        #14<br>
+        <input type="text" value="Ку-ку" id="inp" >
+        <button onclick="buttonClickChangeColor()">Нажми на меня</button>
+
+    </div>
+    <div>
+        #15<br>
+        <input type="text" value="Ку-ку" id="hide" >
+        <button onclick="hide()">Нажми на меня</button>
+        <button onclick="show()">А теперь меня!</button>
+
+    </div>
+    <div>
+        #16<br>
+        <input type="text" value="Ку-ку" id="bigred" ><br><br>
+        <button onclick="buttonClickChangeShapeAndColor()">Нажми на меня</button>
+
+    </div>
+    <div>
+        #17<br>
+        <input type="submit" onclick="onClickDisableNew()" id="enable" value="О, меня снова можно нажимать!"><br><br>
+        <input type="submit" class="invisible" onclick="onClickEnable()" id="disable" value="нажми, чтобы отблокировать элемент">
+
+    </div>
+    <div>
+        #18<br>
+        <input type="submit" value="0" onclick="clickCount(this)" style="width: 100px">
+
+    </div>
+    <div>
+        #19<br>
+        <input type="text" value="Ку-ку" id="inp" >
+        <button onclick="buttonClickChangeFloat()">Нажми на меня</button>
+
+    </div>
+
 </div>
 </body>
 </html>
