--- a/dom-operation/index.html
+++ b/dom-operation/index.html
@@ -105,8 +105,21 @@
     </div>
     <div>
         #19<br>
-        <input type="text" value="Ку-ку" id="inp" >
-        <button onclick="buttonClickChangeFloat()">Нажми на меня</button>
+        <input type="text" value="Ку-ку" id="#float" >
+        <button onclick="buttonClickChangeFloat()" >Нажми на меня</button>
+
+    </div>
+    <div>
+        #20<br>
+        <input type="text" class="aaa ddd ggg" value="Ку-ку"  id="#showclasses">
+        <button onclick="buttonClickShowClases()" >Нажми на меня</button>
+
+    </div>
+    <div>
+        #21<br>
+        <input type="text"  value="привет"  id="#hello">
+        <input type="text"  value="пока"  id="#goodbye">
+        <button onclick="buttonClickChangeValue()" >Нажми на меня</button>
 
     </div>
 
