Задачи на отработку изменений DOM элементов done

--- a/dom-operation/index.html
+++ b/dom-operation/index.html
@@ -122,6 +122,50 @@
         <button onclick="buttonClickChangeValue()" >Нажми на меня</button>
 
     </div>
+    <div>
+        #22<br>
+        <input type="text"   id="#input">
+        <input type="text"    id="#output" disabled>
+        <button onclick="buttonClickCount()" >Нажми на меня</button>
+
+    </div>
+    <div>
+        #23<br>
+        <input type="text"   id="#in">
+        <input type="text"    id="#result" disabled>
+        <button onclick="buttonClickCountWithValidation()" >Нажми на меня</button>
+
+    </div>
+    <div>
+        #24<br>
+        <button onclick="buttonClickDisable(this)" >Нажми на меня</button>
+
+    </div>
+    <div>
+        #25<br>
+        <input type="text"   id="#inputform"><br><br>
+
+        <br>
+        <button onclick="buttonClickAddValue('-')" value="-" style="width: 100px">Я добавлю - </button>
+        <br>
+        <button onclick="buttonClickAddValue('+')" value="" style="width: 100px">Я добавлю  </button>
+        <button onclick="buttonClickAddValue('/')" value="/" style="width: 100px">Я добавлю / </button>
+        <br>
+        <button onclick="buttonClickAddValue()" value="*" style="width: 100px">Я добавлю * </button>
+        <br>
+        <br>
+        <button onclick="buttonClickAddValue()" value="1" style="width: 100px">1</button><br>
+        <button onclick="buttonClickAddValue()" value="2" style="width: 100px">2</button><br>
+        <button onclick="buttonClickAddValue()" value="3" style="width: 100px">3</button><br>
+        <button onclick="buttonClickAddValue()" value="4" style="width: 100px">4</button><br>
+        <button onclick="buttonClickAddValue()" value="5" style="width: 100px">5</button><br>
+        <button onclick="buttonClickAddValue()" value="6" style="width: 100px">6</button><br>
+        <button onclick="buttonClickAddValue()" value="7" style="width: 100px">7</button><br>
+        <button onclick="buttonClickAddValue()" value="8" style="width: 100px">8</button><br>
+        <button onclick="buttonClickAddValue()" value="9" style="width: 100px">9</button><br>
+        <button onclick="buttonClickAddValue()" value="0" style="width: 100px">0</button><br>
+
+    </div>
 
 </div>
 </body>
