Задачи на даты в JavaScript

--- a/date-func/index.html
+++ b/date-func/index.html
@@ -6,6 +6,8 @@
     <script src="script.js"></script>
 </head>
 <body>
-
+<div class="inputContainer">
+    <input type="text" style="width: 200px" placeholder="YYYY-MM-DD" onblur="func(this)">
+</div>
 </body>
 </html>
