- Задачи на продвинутую работу с событиями в JavaScript in progress v1.0

--- a/dom-operation-intermed/index.html
+++ b/dom-operation-intermed/index.html
@@ -121,11 +121,22 @@
     // Дан ul. Дан массив. Вставьте элементы этого массива в конец ul так, чтобы каждый элемент стоял в своем li.
     // Сделайте так, чтобы к вставляемым li было привязано следующее событие:
     // по нажатию на li она должна вывести на экран свой текст.
-    //
+    // var arr = [1, 2, 3, 4, 5];
+    // var elem = document.querySelector('ul');
+    // for (var i = 0; i < arr.length; i++) {
+    //     var li = document.createElement('li');
+    //     li.innerHTML = arr[i];
+    //     li.onclick = func;
+    //     elem.appendChild(li);
+    // }
+    // function func() {
+    //     alert(this.innerHTML);
+    // }
 
     //     Вставка элементов через insertBefore
     //     Для решения задач данного блока вам понадобятся следующие методы: insertBefore.
     //
+
     //     Дан элемент ul, а в нем li #elem. Вставьте перед элементом #elem новую li с текстом '!!!'.
     //
     //     Вставка элементов через insertAdjacentHTML
