--- a/dom-operation-intermed/index.html
+++ b/dom-operation-intermed/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div id="#elem" class="www">dsfsdfdsfsdf</div>
+<!--<div id="#elem" class="www">dsfsdfdsfsdf</div>-->
 <div class="www">dsfsdfdsfsdf</div>
 <div class="www">dsfsdfdsfsdf</div>
 <div class="www">dsfsdfdsfsdf</div>
@@ -20,7 +20,7 @@
         <li>dd</li>
     </ol>
     <ul>
-        <li>dd</li>
+        <li id="#elem">dd</li>
         <li>dd</li>
         <li>dd</li>
     </ul>
@@ -135,15 +135,20 @@
 
     //     Вставка элементов через insertBefore
     //     Для решения задач данного блока вам понадобятся следующие методы: insertBefore.
-    //
 
     //     Дан элемент ul, а в нем li #elem. Вставьте перед элементом #elem новую li с текстом '!!!'.
     //
+    // var parent = document.querySelector('ul');
+    // var before = document.getElementById('#elem');
+    // var li = document.createElement('li');
+    // li.innerHTML = '!!!';
+    // parent.insertBefore(li, before);
     //     Вставка элементов через insertAdjacentHTML
     //     Для решения задач данного блока вам понадобятся следующие методы: insertAdjacentHTML.
     //
     //     Дан элемент #elem. Вставьте перед ним span с текстом '!!!'.
-    //
+    // var elem = document.getElementById('#elem');
+    // elem.insertAdjacentHTML('beforeBegin', '<span>!!!</span>');
     //     Дан элемент #elem. Вставьте после него span с текстом '!!!'.
     //
     //     Дан элемент #elem. Вставьте ему в начало span с текстом '!!!'.
