Задачи на продвинутую работу с DOM на JavaScript done

--- a/dom-operation-intermed/index.html
+++ b/dom-operation-intermed/index.html
@@ -7,23 +7,8 @@
 </head>
 <body>
 
-<!--<div id="#elem" class="www">dsfsdfdsfsdf</div>-->
-<div class="www">dsfsdfdsfsdf</div>
-<div class="www">dsfsdfdsfsdf</div>
-<div class="www">dsfsdfdsfsdf</div>
-<div class="www">dsfsdfdsfsdf</div>
-<div>
-    <ol>
-        <li>dd</li>
-        <li>dd</li>
-        <li>dd</li>
-        <li>dd</li>
-    </ol>
-    <ul>
-        <li id="#elem">dd</li>
-        <li>dd</li>
-        <li>dd</li>
-    </ul>
+<div class="sample">
+    <input type="submit" value="нажми меня" id="button">
 </div>
 </body>
 </html>
@@ -149,60 +134,188 @@
     //     Дан элемент #elem. Вставьте перед ним span с текстом '!!!'.
     // var elem = document.getElementById('#elem');
     // elem.insertAdjacentHTML('beforeBegin', '<span>!!!</span>');
-    //     Дан элемент #elem. Вставьте после него span с текстом '!!!'.
+    // Дан элемент #elem. Вставьте после него span с текстом '!!!'.
     //
+    // var elem = document.getElementById('#elem');
+    // elem.insertAdjacentHTML('afterEnd', '<span>!!!</span>');
     //     Дан элемент #elem. Вставьте ему в начало span с текстом '!!!'.
     //
+    // var elem = document.getElementById('#elem');
+    // elem.insertAdjacentHTML('afterBegin', '<span>!!!</span>');
     //     Дан элемент #elem. Вставьте ему в конец span с текстом '!!!'.
-    //
+    // var elem = document.getElementById('#elem');
+    // elem.insertAdjacentHTML('beforeEnd', '<span>!!!</span>');
     //     Потомки
     //
     //     Для решения задач данного блока вам понадобятся следующие свойства: firstElementChild, lastElementChild, children.
     //
     //     Дан элемент #elem. Найдите первого потомка этого элемента и сделайте его текст красного цвета.
-    //
+    // var elem = document.getElementById('#elem');
+    // elem.firstElementChild.style.color = 'red';
     //     Дан элемент #elem. Найдите последнего потомка этого элемента и сделайте его текст красного цвета.
     //
+    // var elem = document.getElementById('#elem');
+    // elem.lastElementChild.style.color = 'red';
     //     Дан элемент #elem. Найдите всех потомков этого элемента и добавьте им в конец текст '!'.
     //
+    // var elem = document.getElementById('#elem');
+    //
+    // for (var i = 0; i < elem.children.length; i++ ){
+    //
+    //     elem.children[i].innerHTML = elem.children[i].innerHTML + '!';
+    //
+    //
+    // }
+
     //     Соседи
     //     Для решения задач данного блока вам понадобятся следующие свойства: previousElementSibling, nextElementSibling.
-    //
+
     //     Дан элемент #elem. Найдите его соседа сверху и добавьте ему в конец текст '!'.
+    // var elem = document.getElementById('#elem');
+    // elem.previousElementSibling.innerHTML = elem.previousElementSibling.innerHTML + '!';
     //
     //     Дан элемент #elem. Найдите его соседа снизу и добавьте ему в конец текст '!'.
+    // var elem = document.getElementById('#elem');
+    // elem.nextElementSibling.innerHTML = elem.nextElementSibling.innerHTML + '!';
+
     //
     //     Дан элемент #elem. Найдите его соседа снизу его соседа снизу (следующий элемент за соседним) и добавьте ему в конец текст '!'.
     //
+    // var elem = document.getElementById('#elem');
+    // elem.nextElementSibling.nextElementSibling.innerHTML = elem.nextElementSibling.nextElementSibling.innerHTML + '!';
+
     //     Родители
     //     Для решения задач данного блока вам понадобятся следующие свойства: parentElement, parentNode.
     //
     //     Дан элемент #elem. Найдите его родителя и покрасьте его в красный цвет.
     //
+    // var elem = document.getElementById('#elem');
+    // elem.parentElement.style.color = 'red';
     //     Дан элемент #elem. Найдите родителя его родителя и покрасьте его в красный цвет.
-    //
+    // var elem = document.getElementById('#elem');
+    // elem.parentElement.parentElement.style.color = 'red';
+
     //     Удаление и клонирование
     //     Для решения задач данного блока вам понадобятся следующие свойства: removeChild.
     //
     //     Дан элемент #parent, внутри него дан элемент #child. Дана кнопка. По нажатию на эту кнопку удалите элемент #child.
     //
+    // var button = document.querySelector('input');
+    //  button.addEventListener('click', delFunc);
+    //
+    //  function delFunc() {
+    //  var parent = document.getElementById('#parent');
+    //  var child = document.getElementById('#child');
+    //      parent.removeChild(child);
+    // }
     //     Дан ol. По нажатию на кнопку получите его последнего потомка и удалите его.
     //
+    // var button = document.querySelector('input')
+    //
+    // button.addEventListener('click', delFunc);
+    //
+    // function delFunc() {
+    // var parent = document.querySelector('ol');
+    //
+    //     parent.removeChild(parent.lastElementChild);
+    // }
+
     //     Дан элемент. Сделайте так, чтобы по нажатию по нему этот элемент удалялся.
     //
-    //     Дан ol, а внутри него li. Сделайте так, чтобы по нажатию на любую li эта li удалялась.
+    // var elem = document.querySelector('ol');
+    // document.addEventListener('click', delFunc)
     //
+    // function delFunc() {
+    // elem.remove()
+    // }
+
+    //     Дан ol, а внутри него li. Сделайте так, чтобы по нажатию на любую li эта li удалялась.
+    // var elem = document.getElementsByTagName('li');
+    //
+    // for (var i = 0; i < elem.length; i++) {
+    //     elem[i].addEventListener('click', delFunc)
+    // }
+    //
+    // function delFunc() {
+    //
+    //     this.parentElement.removeChild(this);
+    //
+    // }
+
     //     Клонирование
     //     Для решения задач данного блока вам понадобятся следующие свойства: cloneNode.
     //
     //     Дан инпут. Дана кнопка. По нажатию на кнопку клонируйте этот инпут.
     //
+    // var button = document.querySelector('input')
+    //
+    // button.addEventListener('click', cloneFunc);
+    //
+    // function cloneFunc() {
+    //     var parent = document.getElementById('parent');
+    //     var elem = document.getElementById('input');
+    //     parent.appendChild(elem.cloneNode(true));
+    //
+    // }
+
     //     Практика
     //     Дан массив. Создайте ul через createElement, затем вставьте каждый элемент этого массива в отдельную li внутри этой ul, затем вставьте эту ul в конец body.
     //
-    //     Дан инпут. Рядом с ним находится кнопочка "+". По нажатию на эту кнопку под нашим инпутом должен появится еще один пустой инпут.
+    // var arr = [1, 2, 3, 4, 5, 6];
+    // var ul = document.createElement('ul');
+    // var body = document.querySelector('body');
     //
+    // body.appendChild(ul);
+    //
+    // var parent = document.querySelector('ul');
+    //
+    // for (var i = 0; i < arr.length; i++) {
+    //
+    //     var li = document.createElement('li');
+    //     li.innerHTML = arr[i];
+    //     parent.appendChild(li);
+    //
+    // }
+    //     Дан инпут. Рядом с ним находится кнопочка "+". По нажатию на эту кнопку под нашим инпутом должен появится еще один пустой инпут.
+
+    // var body = document.querySelector('body');
+    // var button = document.getElementById('button');
+    // var text = document.getElementById('text');
+    // button.addEventListener('click', addFunc);
+    //
+    // function addFunc() {
+    //     body.appendChild(document.createElement('br'));
+    //     body.appendChild(text.cloneNode(true));
+    //
+    // }
+
     //     Дан инпут. В него вводится число. По потери фокуса сделайте так, чтобы каждая цифра вставилась в новый инпут. Инпутов для цифр изначально не существует, они должны создаться в процессе работы скрипта.
     //
+    // var text = document.getElementById('text');
+    // var body = document.querySelector('body');
+    //
+    // text.addEventListener('blur', contentCreate)
+    //
+    // function contentCreate() {
+    //
+    //     var content = text.value.split('');
+    //     for (var i = 0; i < content.length; i++){
+    //
+    //         var input = document.createElement('input');
+    //         input.value = content[i];
+    //
+    //         body.appendChild(input);
+    //
+    //     }
+    // }
+
     //     Дана кнопка. Сделайте так, чтобы по нажатию на эту кнопку, скрывался родитель этой кнопки.
+
+    //     var button = document.getElementById('button');
+    // button.addEventListener('click', hideParent);
+    //
+    // function hideParent() {
+    //     button.parentElement.style.display = 'none';
+    // }
+
 </script>
